<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signIn" >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="420dp"
                android:layout_height="700dp"
                >


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="424dp"
                    android:layout_height="302dp"
                    android:background="@drawable/top_background"


                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">
                </androidx.constraintlayout.widget.ConstraintLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="700dp"
                        android:orientation="vertical"
                        tools:ignore="MissingConstraints"
                      >
                        <TextView
                            android:layout_width="231dp"
                            android:layout_height="90dp"
                            android:text="       WELCOME \n  PLEASE SIGN IN \n           HERE !"
                            android:textColor="#ffffff"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            tools:ignore="MissingConstraints"
                            android:layout_marginTop="25sp"
                            android:layout_marginStart="100dp"
                            />
                        <LinearLayout
                            android:layout_width="370dp"
                            android:layout_height="260dp"
                            android:background="@drawable/shape"
                            android:orientation="vertical"
                            android:layout_marginTop="60dp"
                            tools:ignore="MissingConstraints"
                            android:layout_marginStart="25dp">

                            <EditText

                                android:id="@+id/emailSignIn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20sp"
                                android:drawableEnd="@drawable/emaill"
                                android:hint="@string/email"
                                android:inputType="text"
                                android:textSize="15sp"


                                tools:ignore="TextFields,TextSizeCheck,TouchTargetSizeCheck" />

                            <EditText
                                android:id="@+id/passwordSignIn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="20sp"
                                android:drawableEnd="@drawable/password"
                                android:hint="@string/password"
                                android:inputType="text"
                                android:textSize="15sp"
                                tools:ignore="TextFields,TouchTargetSizeCheck" />

                            <CheckBox
                                android:id="@+id/remember"
                                android:layout_width="200sp"
                                android:layout_height="30dp"
                                android:layout_marginStart="20sp"
                                android:layout_marginTop="10sp"
                                android:backgroundTint="#FF9800"
                                android:text="@string/remember_me"
                                android:textColor="@color/blue"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                tools:ignore="TouchTargetSizeCheck" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/goToForget"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:layout_gravity="end"

                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="-35dp"
                            android:text="@string/forget_password"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="MissingConstraints"

                            />

                        <Button
                            android:id="@+id/btnSignIn"
                            android:layout_width="120dp"
                            android:layout_height="55dp"

                            android:layout_marginStart="150dp"
                            android:layout_marginTop="-20dp"
                            android:backgroundTint="@color/yellow"
                            android:text="@string/sgin_in"

                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/goToSignUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="20sp"
                            android:padding="10sp"
                            android:text="@string/new_user_register_here"
                            android:textColor="@color/blue"
                            android:textSize="17sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>




        </LinearLayout>



